--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,14 @@
 language: python
-cache: pip
-sudo: false
 
-# Test environments
-matrix:
-  include:
-   - env: TOXENV=py27
-     python: 2.7
-   - env: TOXENV=py33
-     python: 3.3
-   - env: TOXENV=py34
-     python: 3.4
-   - env: TOXENV=py35
-     python: 3.5
+python:
+  - "3.4"
+  - "3.6"
 
-# Package installation
 install:
-  - pip install tox coveralls
+  - sudo apt-get install libpq-dev python3-dev
+  - pip install --upgrade pip
+  - pip install -e .[dev]
 
-# Run tests
 script:
-  tox
-
-# Register code coverage in coveralls
-after_success:
-  coveralls
+  - python manage.py makemigrations
+  - python manage.py migrate
