--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
         image: nginx:1.11
         container_name: nginx_proxy
         volumes:
-            - ./docker/nginx.conf:/etc/nginx/nginx.conf
-            - ./collect/media/:/var/www/media/
-            - ./collect/static/:/var/www/static/
-            - ./docker/sock/:/tmp/sock/
+            - $PWD/docker/nginx.conf:/etc/nginx/nginx.conf
+            - $PWD/collect/media/:/var/www/media/
+            - $PWD/collect/static/:/var/www/static/
+            - $PWD/docker/sock/:/tmp/sock/
         depends_on:
             - webapp
         ports:
@@ -20,14 +20,14 @@ services:
 # Codeschool app serves the dynamic pages. It has to communicate with the
 # underlying services using the default ports.
     webapp:
-        image: "cslms/codeschool:${TAG-latest}"
+        build: .
         container_name: codeschool-app
         volumes:
-            - ./collect/media/:/app/collect/media/
-            - ./src/:/app/src/
-            - ./log/:/app/log/
-            - ./docker/volumes/db/:/app/db/
-            - ./docker/sock/:/tmp/sock/
+            - $PWD/collect/media/:/app/collect/media/
+            - $PWD/src/:/app/src/
+            - $PWD/log/:/app/log/
+            - $PWD/docker/volumes/db/:/app/db/
+            - $PWD/docker/sock/:/tmp/sock/
         environment:
             - CODESCHOOL_PRODUCTION=true
             - REDIS_SERVER=redis
@@ -43,6 +43,6 @@ services:
         image: redis:3
         container_name: redis_db
         volumes:
-            - ./docker/volumes/redis/:/data/
+            - $PWD/docker/volumes/redis/:/data/
         ports:
-            - '6379:6379'
+            - '5000:6379'
