Configurating path in the dockerfile
Signed-off-by: Thiago Lima <thiagolima.unb@gmail.com>
Signed-off-by: Victor Arnaud <victorhad@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,9 @@ services:
             - redis
         links:
             - redis
-        command: bash -c "inv run --production"
+        command: bash -l -c "python3 manage.py makemigrations && python3 manage.py migrate && gunicorn codeschool.wsgi -b unix:///tmp/sock/webapp.sock --reload -w 4 && python3 manage.py runserver"
+        tty: true
+
 
 # Redis database
     redis:
