--- a/requirements-deploy.txt
+++ b/requirements-deploy.txt
@@ -36,13 +36,12 @@ fake-factory==0.7.2
 Faker==0.7.11
 flake8==3.3.0
 funcsigs==1.0.2
+gunicorn==19.7.1
 html2text==2014.12.29
 html5lib==0.999999999
 inflection==0.3.1
 invoke==0.17.0
 iospec==0.3.16
-ipython==6.0.0
-ipython-genutils==0.2.0
 jedi==0.10.2
 Jinja2==2.8.1
 json-rpc==1.10.3
@@ -78,15 +77,6 @@ pygeneric==0.5.7
 Pygments==2.2.0
 PyJWT==1.5.0
 pyparsing==2.2.0
-pytest==3.0.7
-pytest-base-url==1.3.0
-pytest-cov==2.5.0
-pytest-django==3.1.2
-pytest-factoryboy==1.3.1
-pytest-html==1.14.2
-pytest-metadata==1.4.0
-pytest-selenium==1.10.0
-pytest-variables==1.6.1
 python-boilerplate==0.4.10
 python-dateutil==2.6.0
 python-markdown-math==0.3
@@ -104,9 +94,11 @@ simplegeneric==0.8.1
 six==1.10.0
 social-auth-app-django==1.2.0
 social-auth-core==1.3.0
+srvice==0.1.5
 sulfur==0.1.4
 tox==2.7.0
 traitlets==4.3.2
+transpyler==0.1.2
 Unidecode==0.4.20
 vine==1.1.3
 virtualenv==15.1.0
